--- a/src/app/paginas/home/home.component.html
+++ b/src/app/paginas/home/home.component.html
@@ -1,11 +1,11 @@
-<div id="content-home">
-    <div id="jumbotronG" class="p-5 mb-4 rounded-3 btnG">
-        <div class="container-fluid py-5">
-            <h1 class="display-4"> MY HERO ACADEMIA</h1>
-            <p class="lead"> En un mundo en el que la mayor parte de la población nace con un Don, una habilidad extraordinaria diferente en cada cual, no tardaron en aparecer tanto villanos como héroes dispuestos a detenerlos. Con el tiempo los héroes pasaron a ser funcionarios del gobierno, estando regulados y viviendo de su trabajo, además de convertirse en objeto de admiración de muchos. Ahora, ser héroe es el sueño de la gran mayoría de niños, que esperan desde muy pequeños a que su Don se manifieste para comenzar a entrenar y soñar con convertirse en los héroes número uno.</p>
-            <hr>
-            <p>Disfruta del anime ahora mismo...</p>
-            <a class="btn btn-primary" href="https://www.crunchyroll.com/es/series/G6NQ5DWZ6/my-hero-academia">crunchyroll</a>
-        </div>
+<div class="p-5 mb-4 rounded-3 text-white hero-mha">
+    <div class="container-fluid py-5">
+        <h1 class="display-3 fw-bold">MY HERO ACADEMIA</h1>
+        <p class="col-lg-8 fs-4">En un mundo donde casi todos nacen con un superpoder, surgen héroes y villanos. Izuku Midoriya, un chico sin Don, sueña con convertirse en el héroe número uno. Su vida cambia al conocer a su ídolo, All Might, quien le lega su poder.</p>
+        <hr class="my-4 border-light">
+        <p class="fs-5">Disponible en streaming. ¡No te pierdas la acción!</p>
+        <a class="btn btn-success btn-lg" href="https://www.crunchyroll.com/es/series/G6NQ5DWZ6/my-hero-academia" role="button">
+            <i class="bi bi-play-btn-fill me-2"></i>Ver Ahora
+        </a>
     </div>
 </div>
